--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Mustafa Saeed Haji Ali",
   "dependencies": {
+    "body-parser": "^1.10.1",
     "debug": "^2.1.0",
     "del": "^1.1.1",
     "express": "^4.10.6",
@@ -15,8 +16,12 @@
     "gulp-browserify": "^0.5.0",
     "gulp-react": "^2.0.0",
     "gulp-rename": "^1.2.0",
+    "morgan": "^1.5.1",
+    "pg": "^4.2.0",
+    "q": "^1.1.2",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
-    "reflux": "^0.2.1"
+    "reflux": "^0.2.1",
+    "request": "^2.51.0"
   }
 }
