--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-web-builder",
+  "name": "web-app-ide",
   "version": "0.0.1",
   "description": "Website builder using react.js.",
   "main": "index.js",
@@ -9,9 +9,11 @@
   "author": "Mustafa Saeed Haji Ali",
   "dependencies": {
     "body-parser": "^1.10.1",
+    "connect-redis": "^2.2.0",
     "debug": "^2.1.0",
     "del": "^1.1.1",
     "express": "^4.10.6",
+    "express-session": "^1.10.4",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-react": "^2.0.0",
@@ -22,6 +24,8 @@
     "react": "^0.12.2",
     "react-router": "^0.11.6",
     "reflux": "^0.2.6",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "gulp-notify": "^2.2.0",
+    "node-notifier": "^4.1.2"
   }
 }
