Added sites app that runs deployed sites. Moved code shared by sites and ide into core folder which is referenced by ide and sites apps via npm.

--- a/ide/package.json
+++ b/ide/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-app-ide",
+  "name": "webappide",
   "version": "0.0.1",
   "description": "Website builder using react.js.",
   "main": "index.js",
