--- a/ide/package.json
+++ b/ide/package.json
@@ -16,16 +16,17 @@
     "express-session": "^1.10.4",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
+    "gulp-notify": "^2.2.0",
     "gulp-react": "^2.0.0",
     "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.2.0",
     "morgan": "^1.5.1",
+    "node-notifier": "^4.1.2",
     "pg": "^4.2.0",
     "q": "^1.1.2",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
     "reflux": "^0.2.6",
-    "request": "^2.51.0",
-    "gulp-notify": "^2.2.0",
-    "node-notifier": "^4.1.2"
+    "request": "^2.51.0"
   }
 }
