--- a/sites/package.json
+++ b/sites/package.json
@@ -15,6 +15,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
     "pg": "^4.3.0",
     "q": "^1.2.0",
     "react": "^0.12.2",
