--- a/sites/package.json
+++ b/sites/package.json
@@ -16,6 +16,7 @@
     "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
+    "morgan": "^1.5.2",
     "pg": "^4.3.0",
     "q": "^1.2.0",
     "react": "^0.12.2",
